fix the project description

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pytest-helm-chart"
 version = "0.1.0"
-description = "A simple plugin to use with pytest]: A plugin to provide different types and configs of Kubernetes clusters that can be used for testing."
+description = "A plugin to provide different types and configs of Kubernetes clusters that can be used for testing."
 authors = ["Łukasz Piątkowski <lukasz@giantswarm.io>"]
 license="Apache-2.0"
 repository="https://github.com/giantswarm/pytest-kube"
