update poetry config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pytest-helm-chart"
-version = "0.1.0"
+version = "0.1.1"
 description = "A plugin to provide different types and configs of Kubernetes clusters that can be used for testing."
 authors = ["Łukasz Piątkowski <lukasz@giantswarm.io>"]
 license="Apache-2.0"
@@ -8,6 +8,9 @@ repository="https://github.com/giantswarm/pytest-helm-chart"
 readme="README.md"
 keywords=["kubernetes","helm","chart"]
 include = ["CHANGELOG.md","DCO"]
+packages = [
+    { include = "pytest_helm_charts/**/*.py" },
+]
 classifiers=[
     'Development Status :: 4 - Beta',
     'Framework :: Pytest',
