--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,14 +22,14 @@ classifiers=[
     'Programming Language :: Python :: 3.7',
     'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: Implementation :: CPython',
-    'Operating System :: OS Independent',
+    'Operating System :: POSIX :: Linux',
     'License :: OSI Approved :: Apache Software License',
 ]
 
 [tool.poetry.plugins] # Optional super table
 
 [tool.poetry.plugins."pytest11"]
-"kube-provider" = "pytest_helm_chart"
+"kube-provider" = "pytest_helm_charts.fixtures"
 
 [tool.poetry.dependencies]
 python = "^3.6"
@@ -40,6 +40,9 @@ pykube-ng = "^20.5.0"
 autopep8 = "^1.5.2"
 tox = "^3.15.1"
 tox-pyenv = "^1.1.0"
+mkdocs = "^1.1.2"
+mkdocs-material = "^5.3.0"
+mkapi = {version = "^1.0.2", python = "^3.7"}
 
 [build-system]
 requires = ["poetry>=0.12"]
