--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ tox = "^3.15.1"
 tox-pyenv = "^1.1.0"
 mkdocs = {version = "^1.1.2", optional = true }
 mkdocs-material = {version = "^5.3.0", optional = true }
-mkapi = {version = "1.0.2", python = "^3.7"}
+mkapi = {version = "^1.0.3", python = "^3.7"}
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkdocs-material", "mkapi"]
