--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,17 +35,16 @@ classifiers=[
 python = "^3.6"
 pytest = "^5.4.2"
 pykube-ng = "^20.5.0"
+mkdocs = {version = "^1.1.2", optional = true }
+mkapi = {version = "^1.0.3", python = "^3.7", optional = true}
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.2"
 tox = "^3.15.1"
 tox-pyenv = "^1.1.0"
-mkdocs = {version = "^1.1.2", optional = true }
-mkdocs-material = {version = "^5.3.0", optional = true }
-mkapi = {version = "^1.0.3", python = "^3.7"}
 
 [tool.poetry.extras]
-docs = ["mkdocs", "mkdocs-material", "mkapi"]
+docs = ["mkdocs", "mkapi"]
 
 [build-system]
 requires = ["poetry>=0.12"]
