--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ mkapi = {version = "^1.0.3", python = "^3.7", optional = true}
 autopep8 = "^1.5.2"
 tox = "^3.15.1"
 tox-pyenv = "^1.1.0"
+pytest-mock = "^3.1.1"
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
