first test working

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,6 @@ envlist = py36,py37,py38
 whitelist_externals = poetry
 deps = pytest>=3.0
 commands = 
-    poetry install -v --no-dev
+    poetry install -v
     poetry run pytest {posargs}
 
