--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,9 @@ markdown_extensions:
 nav:
   - Home: index.md
   - API: mkapi/api/pytest_helm_charts|upper|strict
+  - Examples:
+      - Basic: 'examples/basic.md'
+      - Giant Swarm App Platform: 'examples/giantswarm.md'
   - About:
     - 'License': 'license.md'
     - 'Changelog': 'changelog.md'
