add pytest-cov to dev

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ pytest = "^5.4.2"
 pykube-ng = "^20.5.0"
 mkdocs = {version = "^1.1.2", optional = true }
 mkapi = {version = "^1.0.8", python = "^3.7", optional = true}
+pytest-cov = "^2.10.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.2"
