--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7]
 
     steps:
     - uses: actions/checkout@v2
@@ -16,15 +16,17 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install
-      uses: abatilo/actions-poetry@v1.5.0
+    - name: Install poetry
+      uses: Gr1N/setup-poetry@v2
+    - uses: actions/cache@v1
       with:
-        python_version: ${{ matrix.python-version }}
-        poetry_version: 1.0
-        args: install
-    - name: Run pytest
-      uses: abatilo/actions-poetry@v1.5.0
-      with:
-        python_version: ${{ matrix.python-version }}
-        poetry_version: 1.0
-        args: run python -m pytest --cov pytest_helm_charts/ --log-cli-level info tests/
+        path: ~/.cache/pypoetry/virtualenvs
+        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+    - name: potry check version
+      run: poetry --version
+    - name: potry install
+      run: poetry install
+    - name: poetry run pytest
+      run: poetry run python -m pytest --cov pytest_helm_charts/ --log-cli-level info tests/
