--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.8.2]
 
     steps:
     - uses: actions/checkout@v2
@@ -16,14 +16,16 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: python check version
+      run: python --version
     - name: Install poetry
       uses: Gr1N/setup-poetry@v2
-    - uses: actions/cache@v1
-      with:
-        path: ~/.cache/pypoetry/virtualenvs
-        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+      #    - uses: actions/cache@v1
+      #      with:
+      #        path: ~/.cache/pypoetry/virtualenvs
+      #        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+      #        restore-keys: |
+      #          ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
     - name: potry check version
       run: poetry --version
     - name: potry install
