--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ autopep8 = "^1.5.2"
 tox = "^3.15.1"
 tox-pyenv = "^1.1.0"
 pytest-mock = "^3.1.1"
+flake8 = "^3.8.3"
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
