--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ tox = "^3.15.1"
 tox-pyenv = "^1.1.0"
 pytest-mock = "^3.1.1"
 flake8 = "^3.8.3"
+mypy = "^0.782"
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
