--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.6, 3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v2
@@ -16,8 +16,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Python check version
+      run: python --version
     - name: Install poetry
       uses: Gr1N/setup-poetry@v2
+    - name: Poetry check version
+      run: poetry --version
     - name: Restore poetry cache
       uses: actions/cache@v1
       with:
@@ -25,8 +29,6 @@ jobs:
         key: ${{ runner.os }}-poetry-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
         restore-keys: |
           ${{ runner.os }}-poetry-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
-    - name: Poetry check version
-      run: poetry --version
     - name: Poetry install dependencies
       run: poetry install
     - name: Lint with flake8
