Include unit testing and example testing (#3)
* make Cluster class abstract
* add pytest-cov and codecov for coverage reporting
* add gatling parser and wait_for_job
* add github workflow
* add flake8
* app-factory: return ConfiguredApp instead of just AppCR

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pytest-helm-chart"
+name = "pytest-helm-charts"
 version = "0.1.1"
 description = "A plugin to provide different types and configs of Kubernetes clusters that can be used for testing."
 authors = ["Łukasz Piątkowski <lukasz@giantswarm.io>"]
@@ -36,12 +36,16 @@ python = "^3.6"
 pytest = "^5.4.2"
 pykube-ng = "^20.5.0"
 mkdocs = {version = "^1.1.2", optional = true }
-mkapi = {version = "^1.0.3", python = "^3.7", optional = true}
+mkapi = {version = "^1.0.8", python = "^3.7", optional = true}
+pytest-cov = "^2.10.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.2"
 tox = "^3.15.1"
 tox-pyenv = "^1.1.0"
+pytest-mock = "^3.1.1"
+flake8 = "^3.8.3"
+mypy = "^0.782"
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
