--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,29 @@
 name: build
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - master
+  create:
+    tags:
+      - '*'
 
 jobs:
-  test:
+  release:
+    needs: test
+    runs-on: ubuntu-latest
+    env:
+      POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+    if: ${{ github.create.ref_type == 'tag' }}
+    steps:
+      - name: Release on pypi
+        run: echo "poetry publish --build"
 
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
