--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
-      #    if: ${{ github.ref_type == 'tag' }}
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - name: print ref type
-        run: echo "${{ github.ref_type }}"
-      - name: print ref
-        run: echo "${{ github.ref }}"
       - name: Release on pypi
-        run: echo "poetry publish --build"
+        run: poetry publish --build
 
   test:
     runs-on: ubuntu-latest
