--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
-    if: ${{ github.create.ref_type == 'tag' }}
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Release on pypi
-        run: echo "poetry publish --build"
+        run: poetry publish --build
 
   test:
     runs-on: ubuntu-latest
