--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,17 @@ jobs:
       POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - name: Release on pypi
-        run: poetry publish --build
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.8"
+    - name: Python check version
+      run: python --version
+    - name: Install poetry
+      uses: Gr1N/setup-poetry@v2
+    - name: Release on pypi
+      run: poetry publish --build
 
   test:
     runs-on: ubuntu-latest
