--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,7 @@ jobs:
     - name: Install poetry
       uses: Gr1N/setup-poetry@v2
     - name: Release on pypi
-      run: poetry version
-      #run: poetry publish --build
+      run: poetry publish --build
 
   test:
     runs-on: ubuntu-latest
