--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ pytest-mock = "^3.1.1"
 flake8 = "^3.8.3"
 mypy = "^0.782"
 pytest-cov = "^2.10.0"
+bandit = "^1.6.2"
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
