--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ flake8 = "^3.8.3"
 mypy = "^0.782"
 pytest-cov = "^2.10.0"
 bandit = "^1.6.2"
+black = "^19.10b0"
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
