--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ mypy = "^0.782"
 pytest-cov = "^2.10.0"
 bandit = "^1.6.2"
 black = "^19.10b0"
+pre-commit = {version = "^2.6.0", python = "^3.7"}
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
