--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,12 +5,6 @@ repos:
   - id: check-hooks-apply
   - id: check-useless-excludes
 
-  ## reorder Python imports
-  #- repo: https://github.com/asottile/reorder_python_imports
-  #  rev: v2.3.0
-  #  hooks:
-  #  - id: reorder-python-imports
-  #
   ## format Python code with black
   #- repo: https://github.com/psf/black
   #  rev: stable
@@ -39,13 +33,13 @@ repos:
   hooks:
   - id: mypy
 
-    #- repo: https://github.com/pre-commit/pre-commit-hooks
-    #  rev: v2.4.0
-    #  hooks:
-    #  - id: check-added-large-files
-    #  - id: check-docstring-first
-    #  - id: debug-statements
-    #  - id: end-of-file-fixer
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.4.0
+  hooks:
+  - id: check-added-large-files
+  - id: check-docstring-first
+  - id: debug-statements
+  - id: end-of-file-fixer
     #  - id: flake8
     #    additional_dependencies: ["flake8-bugbear"]
     #  - id: trailing-whitespace
