--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,9 +42,8 @@ repos:
   - id: end-of-file-fixer
     #  - id: flake8
     #    additional_dependencies: ["flake8-bugbear"]
-    #  - id: trailing-whitespace
-    #  - id: check-ast
-    #  - id: check-builtin-literals
-    #  - id: detect-private-key
-    #  - id: mixed-line-ending
-    #
+  - id: trailing-whitespace
+  - id: check-ast
+  - id: check-builtin-literals
+  - id: detect-private-key
+  - id: mixed-line-ending
