--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,10 +22,10 @@ repos:
 
 # bandit
 -   repo: https://github.com/PyCQA/bandit
-    rev: '1.6.2' # Update me!
+    rev: '1.6.2'
     hooks:
     - id: bandit
-      args: ["-s", "B101"]
+      args: ["-c", ".bandit"]
 
 # static type checking with mypy
 - repo: https://github.com/pre-commit/mirrors-mypy
