--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,25 @@ pre-commit = {version = "^2.6.0", python = "^3.7"}
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
 
+[tool.black]
+line-length = 120
+target-version = ['py36', 'py37', 'py38']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
