--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
 isolated_build = true
-envlist = py36,py37,py38
+envlist = py37,py38
 
 [testenv]
 whitelist_externals = poetry
