include pre-commit in tox, mark line as nosec

--- a/tox.ini
+++ b/tox.ini
@@ -8,4 +8,5 @@ whitelist_externals = poetry
 deps = pytest>=3.0
 commands =
     poetry install -v
+    poetry run pre-commit run --all-files
     poetry run pytest {posargs}
