--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers=[
     'Topic :: Software Development :: Testing',
     'Programming Language :: Python',
     'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.6',
     'Programming Language :: Python :: 3.7',
     'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: Implementation :: CPython',
@@ -32,11 +31,11 @@ classifiers=[
 "helm-charts" = "pytest_helm_charts.fixtures"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 pytest = "^5.4.2"
 pykube-ng = "^20.7.0"
 mkdocs = {version = "^1.1.2", optional = true }
-mkapi = {version = "^1.0.10", python = "^3.7", optional = true}
+mkapi = {version = "^1.0.10", optional = true}
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.2"
@@ -46,9 +45,31 @@ pytest-mock = "^3.1.1"
 flake8 = "^3.8.3"
 mypy = "^0.782"
 pytest-cov = "^2.10.0"
+bandit = "^1.6.2"
+black = "^19.10b0"
+pre-commit = "^2.6.0"
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
+
+[tool.black]
+line-length = 120
+target-version = ['py37', 'py38']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
 
 [build-system]
 requires = ["poetry>=0.12"]
