--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
 isolated_build = true
-envlist = py36,py37,py38
+envlist = py37,py38
 
 [testenv]
 whitelist_externals = poetry
 deps = pytest>=3.0
-commands = 
+commands =
     poetry install -v
+    poetry run pre-commit run --all-files
     poetry run pytest {posargs}
-
