--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ classifiers=[
 [tool.poetry.dependencies]
 python = "^3.7"
 pytest = "^5.4.2"
-pykube-ng = "^20.7.0"
+pykube-ng = { git = "https://github.com/hjacobs/pykube.git" }
 mkdocs = {version = "^1.1.2", optional = true }
 mkapi = {version = "^1.0.10", optional = true}
 
