--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
 
 # format Python code with black
 - repo: https://github.com/psf/black
-  rev: stable
+  rev: 19.10b0
   hooks:
     - id: black
       #      language_version: python3.7
