--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,11 +4,13 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-    assignees: piontec
+    assignees:
+      - piontec
     open-pull-requests-limit: 1
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
-    assignees: piontec
+    assignees:
+      - piontec
     open-pull-requests-limit: 1
