--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -7,6 +7,9 @@ updates:
     assignees:
       - piontec
     open-pull-requests-limit: 1
+    labels:
+      - dependencies
+      - python
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
