--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
 
 # format Python code with black
 - repo: https://github.com/psf/black
-  rev: 20.8b1
+  rev: 21.7b0
   hooks:
     - id: black
       #      language_version: python3.7
@@ -22,27 +22,28 @@ repos:
 
 # bandit
 -   repo: https://github.com/PyCQA/bandit
-    rev: '1.6.2'
+    rev: '1.7.0'
     hooks:
     - id: bandit
       args: ["-c", ".bandit"]
 
 # static type checking with mypy
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.790
+  rev: v0.910
   hooks:
   - id: mypy
+    args: ["--install-types", "--non-interactive"]
 
 # flake8
 -   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.4
+    rev: 3.9.2
     hooks:
     - id: flake8
       additional_dependencies: ["flake8-bugbear"]
       args: [--max-line-length=120]
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v3.3.0
+  rev: v4.0.1
   hooks:
   - id: check-added-large-files
   - id: check-docstring-first
