--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
 
 # format Python code with black
 - repo: https://github.com/psf/black
-  rev: 21.7b0
+  rev: 21.9b0
   hooks:
     - id: black
       #      language_version: python3.7
@@ -29,7 +29,7 @@ repos:
 
 # static type checking with mypy
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.910
+  rev: v0.910-1
   hooks:
   - id: mypy
     args: ["--install-types", "--non-interactive"]
