--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pytest = "^6.1.2"
 pykube-ng = ">=20.10,<22.0"
 mkdocs = {version = "^1.1.2", optional = true }
 mkapi = {version = "^1.0.10", optional = true}
+Deprecated = "^1.2.13"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.2"
