--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers=[
     'Programming Language :: Python :: 3',
     'Programming Language :: Python :: 3.7',
     'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: Implementation :: CPython',
     'Operating System :: POSIX :: Linux',
     'License :: OSI Approved :: Apache Software License',
@@ -34,8 +35,8 @@ classifiers=[
 python = "^3.7"
 pytest = "^6.1.2"
 pykube-ng = ">=20.10,<22.0"
-mkdocs = {version = "^1.1.2", optional = true }
-mkapi = {version = "^1.0.10", optional = true}
+mkdocs = {version = "^1.2.3", optional = true }
+mkapi = {version = "^1.0.14", optional = true}
 Deprecated = "^1.2.13"
 
 [tool.poetry.dev-dependencies]
@@ -55,7 +56,7 @@ docs = ["mkdocs", "mkapi"]
 
 [tool.black]
 line-length = 120
-target-version = ['py37', 'py38']
+target-version = ['py37', 'py38', 'py39']
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -73,5 +74,5 @@ exclude = '''
 '''
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
