--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers=[
     'Topic :: Software Development :: Testing',
     'Programming Language :: Python',
     'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.7',
     'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
@@ -33,7 +32,7 @@ classifiers=[
 "helm-charts" = "pytest_helm_charts.plugin"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 pytest = "^6.1.2"
 pykube-ng = ">=20.10,<22.0"
 mkdocs = {version = "^1.2.3", optional = true }
@@ -57,7 +56,7 @@ docs = ["mkdocs", "mkapi"]
 
 [tool.black]
 line-length = 120
-target-version = ['py37', 'py38', 'py39', 'py310']
+target-version = ['py38', 'py39', 'py310']
 include = '\.pyi?$'
 exclude = '''
 /(
