--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,9 +47,9 @@ pytest-mock = "^3.6.1"
 flake8 = "^5.0.0"
 mypy = "^0.991"
 pytest-cov = "^4.0.0"
-bandit = "^1.7.0"
-black = "^21.7b0"
-pre-commit = "^2.12.1"
+bandit = "^1.7.4"
+black = "^22.10.0"
+pre-commit = "^2.20.0"
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkapi"]
