--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ classifiers=[
 "helm-charts" = "pytest_helm_charts.plugin"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 pytest = "^7.1.2"
 pykube-ng = ">=22.6,<23"
 mkdocs = {version = "^1.2.3", optional = true }
@@ -41,7 +41,7 @@ Deprecated = "^1.2.13"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^2.0.0"
-tox = "^4.0.0"
+tox = "<4"
 tox-pyenv = "^1.1.0"
 pytest-mock = "^3.6.1"
 flake8 = "^5.0.0"
@@ -56,7 +56,7 @@ docs = ["mkdocs", "mkapi"]
 
 [tool.black]
 line-length = 120
-target-version = ['py38', 'py39', 'py310']
+target-version = ['py38', 'py39', 'py310', 'py311']
 include = '\.pyi?$'
 exclude = '''
 /(
