--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
 isolated_build = true
-envlist = py38,py39,py310
+envlist = py38,py39,py310,py311
 
 [testenv]
 whitelist_externals = poetry
-deps = pytest>=3.0
+deps = pytest>=7.1.2
 commands =
     poetry install -v
     poetry run pre-commit run --all-files
