--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,10 @@ isolated_build = true
 envlist = py38,py39,py310,py311
 
 [testenv]
-whitelist_externals = poetry
+allowlist_externals = poetry
 deps = pytest>=7.1.2
+setenv =
+    VIRTUALENV_DISCOVERY=pyenv
 commands =
     poetry install -v
     poetry run pre-commit run --all-files
