fix branch name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,10 @@ on:
     types: [checks_requested]
   pull_request:
     branches:
-      - master
+      - main
   push:
     branches:
-      - master
+      - main
   create:
     tags:
       - "*"
