--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
-# For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
-isolated_build = true
 envlist = py39,py310,py311,py312
 
 [testenv]
-whitelist_externals = poetry
-deps = pytest>=7.1.2
-commands =
-    poetry install -v
+skip_install = true
+allowlist_externals = poetry
+commands_pre =
+    poetry install
     poetry run pre-commit run --all-files
-    poetry run pytest {posargs}
+commands =
+    poetry run pytest tests/ --import-mode importlib
