--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     env:
-      POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+      UV_PUBLISH_TOKEN: ${{ secrets.PYPI_TOKEN }}
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -26,10 +26,12 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
       - name: Python check version
         run: python --version
-      - name: Install poetry
-        uses: Gr1N/setup-poetry@48b0f77c8c1b1b19cb962f0f00dff7b4be8f81ec # v9.0.0
-      - name: Release on pypi
-        run: poetry publish --build
+      - name: Install uv
+        uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867 # v7.1.6
+      - name: Build project
+        run: uv build
+      - name: Publish to PyPI
+        run: uv publish
 
   test:
     runs-on: ubuntu-latest
@@ -38,25 +40,15 @@ jobs:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+      - name: Install uv
+        uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867 # v7.1.6
         with:
+          enable-cache: true
           python-version: ${{ matrix.python-version }}
+      - name: Install tox and tox-uv
+        run: uv tool install tox --with tox-uv
       - name: Python check version
         run: python --version
-      - name: Install poetry
-        uses: Gr1N/setup-poetry@48b0f77c8c1b1b19cb962f0f00dff7b4be8f81ec # v9.0.0
-      - name: Poetry check version
-        run: poetry --version
-      - name: Restore poetry cache
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
-      - name: Poetry install dependencies
-        run: poetry install
       - name: Restore pre-commit cache
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
@@ -65,9 +57,9 @@ jobs:
           restore-keys: |
             pre-commit-${{ matrix.python-version }}-${{ hashFiles('.pre-commit-config.yaml') }}
       - name: Run code quality tools
-        run: poetry run pre-commit run --all-files
+        run: uv run pre-commit run --all-files
       - name: Run pytest
-        run: poetry run python -m pytest --cov=pytest_helm_charts/ --cov-report=xml --log-cli-level=info tests/
+        run: uv run python -m pytest --cov=pytest_helm_charts/ --cov-report=xml --log-cli-level=info tests/
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24 # v5.4.3
         with:
