--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,24 +12,24 @@ readme = "README.md"
 license = "Apache-2.0"
 keywords = ["kubernetes", "helm", "chart"]
 classifiers = [
-  "Development Status :: 4 - Beta",
-  "Framework :: Pytest",
-  "Intended Audience :: Developers",
-  "Topic :: Software Development :: Testing",
-  "Programming Language :: Python",
-  "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: 3.13",
-  "Programming Language :: Python :: Implementation :: CPython",
-  "Operating System :: POSIX :: Linux",
-  "License :: OSI Approved :: Apache Software License",
+    "Development Status :: 4 - Beta",
+    "Framework :: Pytest",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Testing",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Operating System :: POSIX :: Linux",
+    "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-  "pytest>=8.0.0,<9",
-  "pykube-ng>=23.6,<24",
-  "Deprecated>=1.2.13,<2",
+    "pytest>=8.0.0,<9",
+    "pykube-ng>=23.6,<24",
+    "Deprecated>=1.2.13,<2",
 ]
 
 [project.optional-dependencies]
@@ -42,7 +42,14 @@ Repository = "https://github.com/giantswarm/pytest-helm-charts"
 "helm-charts" = "pytest_helm_charts.plugin"
 
 [dependency-groups]
-dev = ["mypy", "pre-commit", "pytest", "pytest-cov", "pytest-mock", "tox>=4.0.0,<5"]
+dev = [
+    "mypy",
+    "pre-commit",
+    "pytest",
+    "pytest-cov",
+    "pytest-mock",
+    "tox>=4.0.0,<5",
+]
 
 [tool.hatch.build.targets.sdist]
 include = ["pytest_helm_charts/**/*.py", "CHANGELOG.md", "DCO"]
@@ -53,32 +60,32 @@ include = ["pytest_helm_charts/**/*.py", "CHANGELOG.md", "DCO"]
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
 exclude = [
-  ".bzr",
-  ".direnv",
-  ".eggs",
-  ".git",
-  ".git-rewrite",
-  ".hg",
-  ".ipynb_checkpoints",
-  ".mypy_cache",
-  ".nox",
-  ".pants.d",
-  ".pyenv",
-  ".pytest_cache",
-  ".pytype",
-  ".ruff_cache",
-  ".svn",
-  ".tox",
-  ".venv",
-  ".vscode",
-  "__pypackages__",
-  "_build",
-  "buck-out",
-  "build",
-  "dist",
-  "node_modules",
-  "site-packages",
-  "venv",
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".ipynb_checkpoints",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "venv",
 ]
 # Same as Black.
 line-length = 120
@@ -131,17 +138,5 @@ env_list = ["py310", "py311", "py312", "py313"]
 
 [tool.tox.env_run_base]
 deps = ["pytest"]
-commands = [
-  [
-    "pre-commit",
-    "run",
-    "--all-files",
-  ],
-  [
-    "pytest",
-    "tests/",
-    "--import-mode",
-    "importlib",
-  ],
-]
+commands = [["pytest", "tests/", "--import-mode", "importlib"]]
 runner = "uv-venv-lock-runner"
